--- a/src/Bluent.UI/Styles/Components/components.css
+++ b/src/Bluent.UI/Styles/Components/components.css
@@ -3206,7 +3206,6 @@
 .bui-split-panel {
   --resizer-size: 0.5rem;
   display: grid;
-  gap: var(--resizer-size);
   grid-template-columns: auto auto 1fr auto auto;
   grid-template-rows: auto auto 1fr auto auto;
 }
@@ -3217,25 +3216,43 @@
   grid-row: 1;
   grid-column: 1/span 5;
 }
+.bui-split-panel > .split-panel.header-panel.resizable {
+  margin-bottom: var(--resizer-size);
+}
 .bui-split-panel > .split-panel.top-panel {
   grid-row: 2;
   grid-column: 3;
+}
+.bui-split-panel > .split-panel.top-panel.resizable {
+  margin-bottom: var(--resizer-size);
 }
 .bui-split-panel > .split-panel.bottom-panel {
   grid-row: 4;
   grid-column: 3;
 }
+.bui-split-panel > .split-panel.bottom-panel.resizable {
+  margin-top: var(--resizer-size);
+}
 .bui-split-panel > .split-panel.footer-panel {
   grid-row: 5;
   grid-column: 1/span 5;
+}
+.bui-split-panel > .split-panel.footer-panel.resizable {
+  margin-top: var(--resizer-size);
 }
 .bui-split-panel > .split-panel.startside-panel {
   grid-row: 2/span 3;
   grid-column: 1;
 }
+.bui-split-panel > .split-panel.startside-panel.resizable {
+  margin-inline-end: var(--resizer-size);
+}
 .bui-split-panel > .split-panel.start-panel {
   grid-row: 2/span 3;
   grid-column: 2;
+}
+.bui-split-panel > .split-panel.start-panel.resizable {
+  margin-inline-end: var(--resizer-size);
 }
 .bui-split-panel > .split-panel.center-panel {
   grid-row: 3;
@@ -3245,9 +3262,15 @@
   grid-row: 2/span 3;
   grid-column: 4;
 }
+.bui-split-panel > .split-panel.end-panel.resizable {
+  margin-inline-start: var(--resizer-size);
+}
 .bui-split-panel > .split-panel.endside-panel {
   grid-row: 2/span 3;
   grid-column: 5;
+}
+.bui-split-panel > .split-panel.endside-panel.resizable {
+  margin-inline-start: var(--resizer-size);
 }
 .bui-split-panel > .split-panel > .panel-resizer {
   display: flex;
